--- a/Aula4-FormatandoTexto/index.html
+++ b/Aula4-FormatandoTexto/index.html
@@ -12,9 +12,17 @@
     
     <h1>Aula de HTML</h1>
 
-    <p>Nesta aula vamos aprender um pouco sobre html.</p>
+    <!-- TAG </strong>É PRA DAR ENFACE A PALAVRA-->
+    <!-- TAG </b> É PARA SOMENTE NEGRITO, SEM MUITA IMPORTANCIOA-->
 
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque, praesentium? Blanditiis iure porro suscipit soluta, nam cum dolorum aspernatur vitae magnam recusandae vel fugit laboriosam autem dolores id quasi quibusdam?</p>
+    <p>Nesta <b>aula vamos</b> aprender um <strong>pouco sobre html.</strong></p>
+
+    <!--TAG <hr> É PARA COLOCAR LINHA-->
+    <hr>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque, praesentium? Blanditiis iure porro suscipit soluta, nam cum dolorum aspernatur vitae magnam recusandae vel <br><br>fugit laboriosam autem dolores id quasi quibusdam?</p>
+
+    <!--TAG <br> É PARA PULAR LINHA-->
+    <br><br>
 
     <h3>H1 até H6 - Cabeçalho</h3>
     <h4>Titulo 4</h4>
