--- a/Aula4-FormatandoTexto/index.html
+++ b/Aula4-FormatandoTexto/index.html
@@ -10,6 +10,19 @@
 </head>
 <body>
     
+    <b></b> - NEGRITO
+    <strong></strong> - Negrito (enfase)
+    <i></i> - Italico
+    <u></u> - Sublinhado
+    <hr> - Linha de divisão
+    <br> - Pular uma linha (quebra de linha)
+    <small></small> - Texto pequeno 
+    <del></del> - Riscado (deletado)
+    <sup></sup> - Superior (Ex. numero exponencial)
+    <sub></sub> - Inferior
+    <mark></mark> - Marcação (destaca Texto)
+
+    
     <h1>Aula de HTML</h1>
 
     <!-- TAG </strong>É PRA DAR ENFACE A PALAVRA-->
