--- a/Aula14-Video/index.html
+++ b/Aula14-Video/index.html
@@ -31,6 +31,8 @@
 <a href="audio.html">Audio</a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
+<a href="video.html">Vídeo</a>
+
 <hr>
 
 <iframe width="100%" style="border: none;" src="" name="meu-iframe" title="Iframe de exemplo"></iframe>
